# Image-Processing-Project

./: Noise.ipynb  README.md  Smoothing.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt
filters/noise/: pepper.py  salt noise.py  salt-and-pepper.py  salt.py  salt_and_pepper.py
filters/sharp/: laplace.py  prewitt.py  sobel.py
filters/smooth/: gauss.py  max.py  mean.py  median.py  min.py
pages/: Noise.py  Sharp.py  Smooth.py  filter_toolkit.py
pages/assets/: filter_toolkit.py
